# ai-accelerator-2026

./: .env.example  .gitignore  QA_REPORT.md  README.md  TEST_REPORT.md  docker-compose.yml  runs.jsonl
deploy/terraform/: .gitignore  .terraform.lock.hcl  README.md  acr.tf  aks.tf  app.tf  main.tf  namespaces.tf  outputs.tf  providers.tf  secrets.tf  supabase.tf  temporal.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/adrs/: 0001-provision-azure-infrastructure-with-terraform.md  0002-aks-deployment-topology-with-in-cluster-supabase-and-temporal.md  0003-orchestrate-ai-summarization-with-temporal-workflow.md  0004-use-anthropic-claude-for-document-summarization.md  0005-supabase-edge-function-summarization-entry-point.md  README.md
docs/specs/: 1-ai-summarizing-does-not-support-odt-files.md  ai-document-summarization.md
frontend/: package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: ai-summarize.live.spec.ts  ai-summarize.smoke.spec.ts
frontend/src/: routeTree.gen.ts
supabase/: config.toml
supabase/migrations/: 20260624120000_ai_document_summaries.sql
temporal/: pyproject.toml
temporal/src/: config.py  poller.py  worker.py
temporal/src/activities/: ai_summarization.py  summarization.py
temporal/src/clients/: supabase_rest.py
temporal/src/workflows/ai/: summarize_workflow.py
temporal/tests/: conftest.py  test_ai_activities.py  test_extract_text.py  test_poller_integration.py  test_summarization.py  test_summarize_claude.py  test_supabase_rest.py  test_workflow_integration.py
(+17 files in other folders)
