[project]
name = "boilerplate-temporal"
version = "0.0.1"
description = "Temporal worker stub for boilerplate stack"
requires-python = ">=3.11"
dependencies = [
  "temporalio==1.5.0",
  "pydantic==2.7.3",
  "pydantic-settings==2.4.0",
  "httpx==0.27.0",
  "pypdf==4.3.1",
  "python-docx==1.1.2"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-json-report",
  "pytest-asyncio"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
# Async workflow/poller tests use plain `async def test_...` without per-test markers.
asyncio_mode = "auto"
testpaths = ["tests"]
